--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "react-dom": "18.2.0",
     "typescript": "4.9.3",
     "wagmi": "^0.8.6"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
